--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "vue": "^2.5.2",
+    "vue-drr": "^1.0.2",
     "vue-fullpage": "^2.0.5",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.15.0",
