- 修复添加新组件报错的问题 - 修复组件名跟tag标签名冲突的问题 - 添加组件数据绑定并更新 - 添加合并、克隆等方法

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "element-ui": "^2.0.10",
     "vue": "^2.5.2",
     "vue-drr": "^1.0.2",
     "vue-fullpage": "^2.0.5",
