--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^0.10.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
