添加页面编辑（背景）、修复图片选取问题等

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "element-ui": "^2.0.10",
+    "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
     "vue-drr": "^1.0.8",
     "vue-fullpage": "^2.0.5",
