--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^3.5.2",
     "element-ui": "^2.0.10",
     "mockjs": "^1.0.1-beta3",
+    "qrcode": "^1.2.0",
     "vue": "^2.5.2",
     "vue-drr": "^1.0.8",
     "vue-fullpage": "^2.0.5",
