修改版本号及描述

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "h5editor",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
+  "version": "0.1.0",
+  "description": "仿易企秀类h5页面编辑工具",
   "author": "alvin-liu <642451695@qq.com>",
   "private": true,
   "scripts": {
