--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mockjs": "^1.0.1-beta3",
     "qrcode": "^1.2.0",
     "vue": "^2.5.2",
+    "vue-context-menu": "^2.0.6",
     "vue-drr": "^1.0.9",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
